kubernetes/manifests/storage/longhorn/ingress-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: longhornauth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - jack'
    #nginx.ingress.kubernetes.io/canary: "true"
    #nginx.ingress.kubernetes.io/canary-weight: "100"
spec:
  rules:
  - host: longhorn.hs.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: longhorn-frontend
          servicePort: 80
